--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/fiaschettima/devELOPEr#readme",
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "session": "^0.1.0",
+    "socket.io": "^4.5.1"
   }
 }
