--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,19 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "devEloper-icon-03.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "devEloper-02.svg",
+      "sizes": "any"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "devEloper-icon-03.svg",
+      "sizes": "any"
     }
   ],
   "start_url": ".",
