--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "developer",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,12 +22,9 @@
   },
   "homepage": "https://github.com/fiaschettima/devELOPEr#readme",
   "dependencies": {
-    "connect-mongodb-session": "^3.1.1",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19",
-    "session": "^0.1.0",
-    "socket.io": "^4.5.1"
+    "concurrently": "^7.0.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "prettier": "^2.1.2"
   }
 }
