--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
+    "install": "cd server && npm i && cd client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/fiaschettima/devELOPEr#readme",
   "dependencies": {
-    "concurrently": "^7.0.0",
+    "concurrently": "^7.3.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "prettier": "^2.1.2"
