--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/fiaschettima/devELOPEr#readme",
   "dependencies": {
     "concurrently": "^7.3.0",
+    "dotenv": "^16.0.1",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "prettier": "^2.1.2"
