--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.11.6",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "pubnub": "^4.29.10",
     "pubnub-react": "^2.1.0",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.2.3",
+    "shave": "^5.0.0",
     "tsparticles": "^2.2.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
