add swipe and home component

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-tinder-card": "^1.5.0",
     "react-tsparticles": "^2.2.3",
     "tsparticles": "^2.2.3",
     "web-vitals": "^2.1.4"
