--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@apollo/client": "3.5.8",
+    "@apollo/client": "^3.6.9",
     "@codemirror/lang-cpp": "^6.0.1",
     "@codemirror/lang-java": "^6.0.0",
     "@codemirror/lang-javascript": "^6.0.2",
@@ -16,12 +16,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.11.6",
-<<<<<<< HEAD
-    "cuid": "^2.1.8",
-=======
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
->>>>>>> main
+    "cuid": "^2.1.8",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
