--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@codemirror/lang-java": "^6.0.0",
     "@codemirror/lang-javascript": "^6.0.2",
     "@codemirror/lang-python": "^6.0.1",
+    "@emoji-mart/data": "^1.0.5",
     "@pubnub/react-chat-components": "^0.12.0",
     "@splidejs/react-splide": "^0.7.8",
     "@splidejs/splide-extension-auto-scroll": "^0.4.2",
@@ -18,6 +19,7 @@
     "@uiw/react-codemirror": "^4.11.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "emoji-mart": "^5.2.1",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
