--- a/client/package.json
+++ b/client/package.json
@@ -18,22 +18,24 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.11.6",
     "axios": "^0.27.2",
+    "cuid": "^2.1.8",
     "dotenv": "^16.0.1",
     "emoji-mart": "^5.2.1",
-    "cuid": "^2.1.8",
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "pubnub": "^4.29.10",
-    "pubnub-react": "^2.1.0",
+    "pubnub": "^4.36.0",
+    "pubnub-react": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.2.3",
+    "sass": "^1.54.7",
     "shave": "^5.0.0",
     "tsparticles": "^2.2.3",
     "uuid": "^8.3.2",
