--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "@codemirror/lang-javascript": "^6.0.2",
     "@codemirror/lang-python": "^6.0.1",
     "@emoji-mart/data": "^1.0.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.3",
     "@pubnub/react-chat-components": "^0.12.0",
     "@splidejs/react-splide": "^0.7.8",
     "@splidejs/splide-extension-auto-scroll": "^0.4.2",
@@ -35,7 +38,6 @@
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-slider": "^2.0.3",
     "react-tinder-card": "^1.5.0",
     "react-tsparticles": "^2.2.3",
     "shave": "^5.0.0",
