--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "graphql": "^16.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "pubnub": "^4.29.10",
+    "pubnub": "^4.36.10",
     "pubnub-react": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -32,6 +32,7 @@
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
+    "react-responsive-masonry": "^2.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-tinder-card": "^1.5.0",
